--- a/src/components/profile/proflile.module.scss
+++ b/src/components/profile/proflile.module.scss
@@ -1,5 +1,6 @@
 .profile {
     display: flex;
+    flex-direction: column;
     gap: 1rem;
 
     .pfp {
@@ -22,6 +23,5 @@
     .oauth {
         width: 3rem;
         height: 3rem;
-        opacity: 0.5;
     }
 }
