--- a/src/components/profile/proflile.module.scss
+++ b/src/components/profile/proflile.module.scss
@@ -25,3 +25,39 @@
         height: 3rem;
     }
 }
+
+.preview {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    background-color: rgb(var(--800));
+    padding: 1rem;
+    border-radius: 1rem;
+    color: rgb(255, 255, 255);
+
+    .pfp {
+        width: 5rem;
+        height: 5rem;
+        border-radius: 50%;
+    }
+
+    .name {
+        font-size: 2rem;
+        margin: 0;
+    }
+
+    .header {
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+    }
+
+    .oauth {
+        width: 2rem;
+        height: 2rem;
+    } 
+
+    &:hover {
+        text-decoration: none;
+    }
+}
