--- a/src/app/poll/[id]/poll.module.scss
+++ b/src/app/poll/[id]/poll.module.scss
@@ -3,6 +3,7 @@
     flex-direction: column;
     align-items: center;
 	background-color: rgb(var(--800));
+    color: white;
 	padding: 2rem;
 	border-radius: 2rem;
 	gap: 1rem;
