--- a/src/components/profile/proflile.module.scss
+++ b/src/components/profile/proflile.module.scss
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     gap: 1rem;
+    color: white;
 
     .pfp {
         width: 10rem;
@@ -18,6 +19,9 @@
         display: flex;
         flex-direction: column;
         gap: 1rem;
+        background-color: rgb(var(--800));
+        padding: 2rem;
+        border-radius: 1rem;
     }
 
     .oauth {
@@ -27,6 +31,7 @@
 }
 
 .preview {
+    color: white;
     display: flex;
     flex-direction: column;
     gap: 1rem;
