--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -1,3 +1,5 @@
+@import url("https://fonts.googleapis.com/css2?family=Onest:wght@100;200;300;400;500;600;700;800;900&display=swap");
+
 :root {
 	--900: 0, 0, 0;
 	--800: 20, 20, 20;
@@ -19,7 +21,7 @@
 }
 
 * {
-	font-family: "Inter", sans-serif !important;
+	font-family: "Onest", sans-serif;
 }
 
 body {
@@ -29,7 +31,7 @@ body {
 }
 
 .container {
-	margin: 10rem 15rem;
+	margin: 5rem 15rem;
 	display: flex;
 	flex-direction: column;
 	gap: 1rem;
